// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-resource-visualizer - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Analyze Azure resource groups and generate detailed Mermaid architecture diagrams showing the relationships between individual resources.
USE FOR: create architecture diagram, visualize Azure resources, show resource relationships, generate Mermaid diagram, analyze resource group, diagram my resources, architecture visualization, resource topology, map Azure infrastructure
DO NOT USE FOR: creating/modifying resources (use azure-deploy), security scanning (use azure-security), performance troubleshooting (use azure-diagnostics), code generation (use relevant service skill)
",
  "extractedKeywords": [
    "aks",
    "analyze",
    "app service",
    "architecture",
    "azure",
    "azure-deploy",
    "azure-diagnostics",
    "azure-security",
    "between",
    "cli",
    "code",
    "create",
    "creating",
    "detailed",
    "diagram",
    "diagrams",
    "function",
    "generate",
    "generation",
    "group",
    "groups",
    "identity",
    "individual",
    "infrastructure",
    "key vault",
    "mcp",
    "mermaid",
    "modifying",
    "monitor",
    "performance",
    "rbac",
    "relationships",
    "relevant",
    "resource",
    "resources",
    "scanning",
    "security",
    "service",
    "show",
    "showing",
    "skill",
    "sql",
    "storage",
    "topology",
    "troubleshooting",
    "visualization",
    "visualize",
    "visualizer",
  ],
  "name": "azure-resource-visualizer",
}
`;

exports[`azure-resource-visualizer - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aks",
  "analyze",
  "app service",
  "architecture",
  "azure",
  "azure-deploy",
  "azure-diagnostics",
  "azure-security",
  "between",
  "cli",
  "code",
  "create",
  "creating",
  "detailed",
  "diagram",
  "diagrams",
  "function",
  "generate",
  "generation",
  "group",
  "groups",
  "identity",
  "individual",
  "infrastructure",
  "key vault",
  "mcp",
  "mermaid",
  "modifying",
  "monitor",
  "performance",
  "rbac",
  "relationships",
  "relevant",
  "resource",
  "resources",
  "scanning",
  "security",
  "service",
  "show",
  "showing",
  "skill",
  "sql",
  "storage",
  "topology",
  "troubleshooting",
  "visualization",
  "visualize",
  "visualizer",
]
`;
